<resources>
    <string name="current_app_name">GitHubApp</string>

    <string name="exit_again">Press Back again to exit application.</string>

    <!-- main menu labels -->
    <string name="menu_trending">Trending</string>
    <string name="menu_most_star">Most Stars</string>
    <string name="menu_account">Profile</string>
    <string name="menu_search">Search</string>

    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="load_searching">Searching</string>
    <string name="loading">Loading</string>
    <string name="sign_in">Sign In</string>
    <string name="please_login">Please Login</string>

    <string name="upgrade">Check the Newest Version</string>
    <string name="about">About This App</string>
    <string name="about_author">About Author</string>

    <string name="repositories">%1$s \'s repositories</string>
    <string name="your_stars">%1$s \'s stars</string>
    <string name="following">%1$s \'s following</string>
    <string name="followers">%1$s \'s followers</string>

    <string name="my_repositories">My Repositories</string>
    <string name="my_stars">my stars</string>
    <string name="my_following">my following</string>
    <string name="my_followers">my followers</string>

    <string name="repodetail_forks_count">( %1$d )</string>
    <string name="repodetail_contributors_count">( %1$d )</string>

    <string name="about_us">About Us</string>
    <string name="about_us_github_com_v3">Api from Github Document \nhttps://developer.github.com/v3/</string>
    <string name="about_us_no_copyright">Copyright © 2017 Jusenr</string>
    <string name="about_us_make_it_better">Welcome to fork/star/pull request to make it better</string>
    <string name="about_us_source_link">Source Link \n https://github.com/Jusenr/androidgithub</string>
    <string name="about_us_qrcode_create_failed">QRCode creation failed</string>

</resources>
